# bitgrain

./: .gitignore  CHANGELOG.md  FORMAT.md  LICENSE  Makefile  README.md  bitgrain  install.sh  main.c  setup.sh  test_dct  test_jpg  uninstall.sh
.github/workflows/: ci.yml  release.yml
bench/: bench.c  bench.h  main.c
bindings/go/: README.md  bitgrain.go  go.mod
bindings/python/: README.md  bitgrain.py
c/: bg_utils.c  bg_utils.h  bitstream.c  bitstream.h  cli.c  cli.h  config.h  dct.c  dct.h  decode_cli.c  decode_cli.h  encode_cli.c  encode_cli.h  icc_io.c  icc_io.h  image_loader.c  image_loader.h  image_writer.c  image_writer.h  metrics.c  metrics.h  path_utils.c  path_utils.h  platform.c  platform.h  quant.c  quant.h  roundtrip_cli.c  roundtrip_cli.h  webp_io.c  webp_io.h
cmake/: BitgrainConfig.cmake.in
completions/: bitgrain.bash
cpp/: encoder.cpp
encoder/: encoder.cpp
encoder/block/: block.cpp  block.hpp
encoder/blockizer/: blockizer.cpp  blockizer.hpp
includes/: encoder.h
includes/bitgrain/: encoder.h
man/: bitgrain.1
pkgconfig/: bitgrain.pc.in
rust/: Cargo.toml
rust/src/: bitstream.rs  block.rs  blockizer.rs  colorspace.rs  dct.rs  decoder.rs  encoder.rs  entropy.rs  ffi.rs  huffman.rs  jpeg_luma_ac_ht.rs  lib.rs  zigzag.rs
rust/src/tests/: dct_tests.rs  huffman_tests.rs  mod.rs
scripts/: benchmark.sh  compare_bg_vs_jpeg.sh  exhaustive_eval.sh  lib_api_smoke.c
tests/: integration.sh
