[package]
name = "bitgrain"
version = "1.0.0"
edition = "2021"
description = "JPEG-like image compressor: custom .bg stream, grayscale/RGB/RGBA, fast encode/decode"
license = "GPL-3.0-or-later"
repository = "https://github.com/your-org/bitgrain"
keywords = ["image", "compression", "jpeg", "codec", "encoder", "decoder"]
categories = ["compression", "multimedia::images"]
authors = ["Bitgrain contributors"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = []
# Future: "simd" for portable_simd or arch-specific DCT/IDCT (faster encode/decode).
